--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -7,9 +7,6 @@ type: application
 icon: https://upload.wikimedia.org/wikipedia/commons/d/dd/MediaWiki-2020-logo.svg
 
 dependencies:
-  - name: crunchy-postgres
-    version: 0.5.0
-    repository: https://bcgov.github.io/crunchy-postgres/
-  - name: crunchy-postgres-tools
-    version: 0.3.0
-    repository: https://bcgov.github.io/crunchy-postgres/
+  - name: patroni
+    version: 0.0.4
+    repository: https://bcgov.github.io/nr-patroni-chart
